cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug212905.cpp
int main() {
    auto A = A;
    A.i;
    
    return 0;
}